Fix menu scolling issue on iphone

--- a/common.css
+++ b/common.css
@@ -99,7 +99,7 @@ body {
     border-right: 1px solid black;
     height: 100%;
     z-index: 10;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     font-size: 20px;
